--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
 	"name": "bazel_tools",
+  "homepage": "https://github.com/marcus-sa/bazel-tools",
+  "repository": "https://github.com/marcus-sa/bazel-tools",
+  "license": "MIT",
 	"devDependencies": {
 		"patch-package": "6.2.0",
-		"prisma2": "2.0.0-preview018.2"
-	}
+		"prisma2": "2.0.0-preview018.2",
+    "@prisma/photon": "2.0.0-preview018.2",
+    "@graphql-codegen/cli": "1.9.1",
+    "json-to-pretty-yaml": "1.2.2",
+    "listr-update-renderer": "0.5.0",
+    "@bazel/bazel": "1.2.0",
+    "@bazel/typescript": "0.42.3",
+    "@bazel/buildifier": "0.29.0",
+    "@bazel/hide-bazel-files": "0.42.3"
+  }
 }
