--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     ],
     "paths": {
       // Must match workspace name
-      "nodejs_bazel_tools/*": [
+      "npm_bazel_tools/*": [
         "dist/bin/*"
       ]
     },
