--- a/packages/prisma/src/package.json
+++ b/packages/prisma/src/package.json
@@ -16,6 +16,7 @@
     "prisma2"
   ],
   "dependencies": {
+    "patch-package": "6.2.0",
     "prisma2": "2.0.0-preview018.2",
     "@prisma/photon": "2.0.0-preview018.2"
   },
